--- a/PR095-DownloadManager/app/src/main/res/menu/activity_main.xml
+++ b/PR095-DownloadManager/app/src/main/res/menu/activity_main.xml
@@ -2,9 +2,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="es.iessaladillo.pedrojoya.pr095.MainActivity" >
     
-    <item android:id="@+id/action_settings"
-        android:title="@string/action_settings"
+    <item android:id="@+id/mnuDescargas"
+        android:title="@string/descargas"
+        android:icon="@android:drawable/ic_menu_view"
         android:orderInCategory="100"
-        android:showAsAction="never" />
+        android:showAsAction="ifRoom" />
 </menu>
-<!-- From: file:/D:/Documents/GitHub/studio/PR095-DownloadManager/app/src/main/res/menu/main.xml -->
