--- a/PR107-Sunshine/app/src/main/res/menu/activity_detalle.xml
+++ b/PR107-Sunshine/app/src/main/res/menu/activity_detalle.xml
@@ -1,15 +1,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".MainActivity">
+    tools:context="pedrojoya.iessaladillo.es.pr107.DetalleActivity">
     <item
         android:id="@+id/action_settings"
         android:title="@string/action_settings"
         android:orderInCategory="100"
         app:showAsAction="never" />
-    <item
-        android:id="@+id/mnuMapa"
-        android:title="@string/localidad_en_el_mapa"
-        app:showAsAction="never" />
-
 </menu>
