--- a/PR109-Retrofit/app/src/main/res/values/dimens.xml
+++ b/PR109-Retrofit/app/src/main/res/values/dimens.xml
@@ -3,5 +3,6 @@
 
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="edittext_padding">3dp</dimen>
 
 </resources>
