--- a/PR110-DragAndDrop/app/src/main/res/values/dimens.xml
+++ b/PR110-DragAndDrop/app/src/main/res/values/dimens.xml
@@ -2,4 +2,8 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="imgWidth">100dp</dimen>
+    <dimen name="margenLateral">20dp</dimen>
+    <dimen name="cuadroWidth">110dp</dimen>
+    <dimen name="leyendaHeight">40dp</dimen>
 </resources>
