--- a/PR110-DragAndDrop/app/src/main/res/layout/activity_main.xml
+++ b/PR110-DragAndDrop/app/src/main/res/layout/activity_main.xml
@@ -2,25 +2,41 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:id="@+id/rlRaiz"
     tools:context=".MainActivity">
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/imgWidth"
+        android:layout_height="@dimen/imgWidth"
         android:id="@+id/imgOrigen"
-        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="@dimen/margenLateral"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:src="@drawable/ciudad" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/lblTitulo"
+        android:layout_marginRight="@dimen/margenLateral"
+        android:layout_alignParentRight="true"
+        android:text="@string/titulo"
+        android:layout_alignParentEnd="true" />
+
     <FrameLayout
-        android:id="@+id/frlDestino"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:background="#AAAAAA"
-        android:gravity="center"
+        android:id="@+id/frlCuadro"
+        android:layout_width="@dimen/cuadroWidth"
+        android:layout_height="@dimen/cuadroWidth"
+        android:background="@color/cuadroBackground"
         android:layout_centerInParent="true" />
+
+    <FrameLayout
+        android:id="@+id/frlLeyenda"
+        android:layout_width="@dimen/cuadroWidth"
+        android:layout_height="@dimen/leyendaHeight"
+        android:background="@color/leyendaBackground"
+        android:layout_alignLeft="@+id/frlCuadro"
+        android:layout_alignStart="@+id/frlCuadro"
+        android:layout_below="@+id/frlCuadro" />
 
 </RelativeLayout>
