--- a/PR112-DragDropListViews/app/src/main/res/values/dimens.xml
+++ b/PR112-DragDropListViews/app/src/main/res/values/dimens.xml
@@ -1,8 +1,6 @@
 <resources>
 
     <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="activity_padding">0dp</dimen>
     <dimen name="lst_margin">4dp</dimen>
     <dimen name="lst_padding">0dp</dimen>
@@ -10,6 +8,6 @@
     <dimen name="icono_height">32dp</dimen>
     <dimen name="icono_margen">8dp</dimen>
     <dimen name="item_padding">8dp</dimen>
-    <dimen name="texto_size">16dp</dimen>
+    <dimen name="texto_size">16sp</dimen>
 
 </resources>
