--- a/PR122-VideoCapture/app/src/main/res/values/styles.xml
+++ b/PR122-VideoCapture/app/src/main/res/values/styles.xml
@@ -2,6 +2,9 @@
 <resources>
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+        <item name="android:windowActionBarOverlay">true</item>
+        <!-- Support library compatibility -->
+        <item name="windowActionBarOverlay">true</item>
+        <item name="android:windowFullscreen">true</item>
     </style>
 </resources>
