--- a/PR127-ActivityTransitions/app/src/main/res/layout/activity_otra.xml
+++ b/PR127-ActivityTransitions/app/src/main/res/layout/activity_otra.xml
@@ -4,17 +4,11 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/lblCuadro"
-        android:text="@string/hello_world"
-        android:layout_width="250dp"
-        android:layout_height="200dp"
-        android:gravity="center"
-        android:background="@color/primary_dark"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:clickable="true"
-        android:textAppearance="?android:textAppearanceLarge"
-        android:textColor="@color/icons" />
+    <ImageView
+        android:id="@+id/imgFoto"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:scaleType="centerCrop"
+        android:clickable="true" />
 
 </RelativeLayout>
