--- a/PR106-RecyclerView/app/src/main/res/anim/fab_elevation.xml
+++ b/PR106-RecyclerView/app/src/main/res/anim/fab_elevation.xml
@@ -4,16 +4,16 @@
         <objectAnimator
             android:propertyName="translationZ"
             android:duration="@android:integer/config_shortAnimTime"
-            android:valueFrom="@dimen/elevation_low"
-            android:valueTo="@dimen/elevation_high"
+            android:valueFrom="@dimen/fab_elevation_low"
+            android:valueTo="@dimen/fab_elevation_high"
             android:valueType="floatType"/>
     </item>
     <item>
         <objectAnimator
             android:propertyName="translationZ"
             android:duration="@android:integer/config_shortAnimTime"
-            android:valueFrom="@dimen/elevation_high"
-            android:valueTo="@dimen/elevation_low"
+            android:valueFrom="@dimen/fab_elevation_high"
+            android:valueTo="@dimen/fab_elevation_low"
             android:valueType="floatType"/>
     </item>
 </selector>
