--- a/PR106-RecyclerView/app/src/main/res/layout/activity_main.xml
+++ b/PR106-RecyclerView/app/src/main/res/layout/activity_main.xml
@@ -1,60 +1,74 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/lstAlumnos"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingBottom="56dp"
-        android:paddingTop="8dp" />
+    <!-- Toolbar -->
+    <include layout="@layout/toolbar" />
 
-    <TextView
-        android:id="@+id/lblNoHayAlumnos"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:drawablePadding="@dimen/empty_drawablePadding"
-        android:drawableTop="@drawable/ic_no_hay_alumnos"
-        android:text="@string/no_hay_alumnos"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
-
-    <ImageButton
-        android:id="@+id/btnAgregar"
-        android:layout_width="56dp"
-        android:layout_height="56dp"
-        android:layout_gravity="right|bottom"
-        android:layout_marginBottom="@dimen/add_button_margin"
-        android:layout_marginRight="@dimen/add_button_margin"
-        android:background="@drawable/oval"
-        android:contentDescription="@string/agregar"
-        android:elevation="@dimen/elevation_high"
-        android:padding="16dp"
-        android:scaleType="fitStart"
-        android:src="@drawable/ic_agregar"
-        android:stateListAnimator="@anim/button_elevation"
-        android:tint="@android:color/white" />
-
+    <!-- Panel -->
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="44dp"
-        android:layout_gravity="bottom"
-        android:background="@color/BottomBar"
-        >
+        android:layout_height="match_parent">
+
+        <!-- Lista -->
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/lstAlumnos"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingBottom="56dp"
+            android:paddingTop="8dp" />
+
+        <!-- Empty View -->
         <TextView
-            android:id="@+id/lblNumAlumnos"
+            android:id="@+id/lblNoHayAlumnos"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:textSize="16sp"
-            android:textColor="@android:color/white"
-            android:layout_marginLeft="16dp"
-            android:text="Alumnos de 2º CFGS DAM"
-            />
+            android:layout_gravity="center"
+            android:drawablePadding="@dimen/empty_drawablePadding"
+            android:drawableTop="@drawable/ic_no_hay_alumnos"
+            android:text="@string/no_hay_alumnos"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+
+        <!-- Panel inferior -->
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="44dp"
+            android:layout_gravity="bottom"
+            android:background="@color/primary_400">
+
+            <TextView
+                android:id="@+id/lblNumAlumnos"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:textSize="16sp"
+                android:textColor="@android:color/white"
+                android:layout_marginLeft="@dimen/fab_margin"
+                android:text="@string/texto_panel" />
+
+        </FrameLayout>
+
+        <!-- FAB -->
+        <pedrojoya.iessaladillo.es.pr106.utils.ShadowLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="@dimen/fab_margin"
+            app:shadowColor="#AA000000"
+            app:cornerRadius="@dimen/fab_diameter"
+            app:dy="1dp"
+            app:shadowRadius="4dp">
+
+            <ImageButton
+                android:id="@+id/btnAgregar"
+                android:contentDescription="@string/agregar_alumno"
+                style="@style/FabStyle" />
+        </pedrojoya.iessaladillo.es.pr106.utils.ShadowLayout>
 
     </FrameLayout>
-
-</FrameLayout>
+</LinearLayout>
 
 
 
