--- a/PR106-RecyclerView/app/src/main/res/layout/activity_main_item.xml
+++ b/PR106-RecyclerView/app/src/main/res/layout/activity_main_item.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:minHeight="56dp"
-    android:background="@drawable/activity_main_item_background"
+    android:background="@drawable/selectable_item_background"
     android:orientation="vertical">
 
     <ImageView
         android:id="@+id/imgUser"
         android:layout_width="48dp"
         android:layout_height="48dp"
+        android:contentDescription="@string/foto_alumno"
         android:layout_alignParentLeft="true"
         android:layout_marginBottom="4dp"
         android:layout_marginLeft="16dp"
@@ -24,7 +26,7 @@
         android:paddingBottom="20dp"
         android:paddingLeft="72dp"
         android:paddingTop="20dp"
-        android:text="Medium Text"
+        tools:text="Baldomero Llegate Ligero"
         android:layout_marginRight="16dp"
         android:textSize="16sp" />
 
