--- a/PR106-RecyclerView/app/src/main/res/values/styles.xml
+++ b/PR106-RecyclerView/app/src/main/res/values/styles.xml
@@ -1,13 +1,18 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Color de la ActionBar -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <!-- Color de la barra de notificaciones -->
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <!-- Color de acento (contraste) -->
-        <item name="colorAccent">@color/colorAccent</item>
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="colorPrimary">@color/primary</item>
+        <item name="colorPrimaryDark">@color/primary_dark</item>
+        <item name="colorAccent">@color/accent</item>
+    </style>
+
+    <!-- Estilo para el FAB -->
+    <style name="FabStyle">
+        <item name="android:layout_width">?attr/actionBarSize</item>
+        <item name="android:layout_height">?attr/actionBarSize</item>
+        <item name="android:background">@drawable/fab_background</item>
+        <item name="android:src">@drawable/ic_plus</item>
     </style>
 
 </resources>
