--- a/PR106-RecyclerView/app/src/main/res/layout/activity_main.xml
+++ b/PR106-RecyclerView/app/src/main/res/layout/activity_main.xml
@@ -3,23 +3,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-
     <!-- Toolbar -->
     <include layout="@layout/toolbar" />
-
     <!-- Panel -->
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
         <!-- Lista -->
         <android.support.v7.widget.RecyclerView
             android:id="@+id/lstAlumnos"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingBottom="56dp"
-            android:paddingTop="8dp" />
-
+            android:paddingBottom="@dimen/actionbar_height"
+            android:paddingTop="@dimen/list_paddingTop" />
         <!-- Empty View -->
         <TextView
             android:id="@+id/lblNoHayAlumnos"
@@ -30,26 +26,23 @@
             android:drawableTop="@drawable/ic_no_hay_alumnos"
             android:text="@string/no_hay_alumnos"
             android:textAppearance="?android:attr/textAppearanceMedium" />
-
         <!-- Panel inferior -->
         <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="44dp"
+            android:layout_height="@dimen/panel_inferior_height"
             android:layout_gravity="bottom"
             android:background="@color/primary_400">
-
             <TextView
                 android:id="@+id/lblNumAlumnos"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:textSize="16sp"
+                android:textSize="@dimen/abc_text_size_subhead_material"
                 android:textColor="@android:color/white"
                 android:layout_marginLeft="@dimen/fab_margin"
+                android:layout_marginStart="@dimen/fab_margin"
                 android:text="@string/texto_panel" />
-
         </FrameLayout>
-
         <!-- FAB -->
         <pedrojoya.iessaladillo.es.pr106.utils.ShadowLayout
             android:layout_width="wrap_content"
@@ -58,15 +51,13 @@
             android:layout_margin="@dimen/fab_margin"
             app:shadowColor="#AA000000"
             app:cornerRadius="@dimen/fab_diameter"
-            app:dy="1dp"
-            app:shadowRadius="4dp">
-
+            app:dy="@dimen/fab_dy"
+            app:shadowRadius="@dimen/fab_shadowRadius">
             <ImageButton
                 android:id="@+id/btnAgregar"
                 android:contentDescription="@string/agregar_alumno"
                 style="@style/FabStyle" />
         </pedrojoya.iessaladillo.es.pr106.utils.ShadowLayout>
-
     </FrameLayout>
 </LinearLayout>
 
