--- a/PR106-RecyclerView/app/src/main/res/layout/activity_main_item.xml
+++ b/PR106-RecyclerView/app/src/main/res/layout/activity_main_item.xml
@@ -3,19 +3,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:minHeight="56dp"
+    android:minHeight="@dimen/single_line_tile_height"
     android:background="@drawable/selectable_item_background"
     android:orientation="vertical">
 
     <ImageView
         android:id="@+id/imgUser"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="@dimen/single_line_avatar_width"
+        android:layout_height="@dimen/single_line_avatar_height"
         android:contentDescription="@string/foto_alumno"
         android:layout_alignParentLeft="true"
-        android:layout_marginBottom="4dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="4dp"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="@dimen/single_line_avatar_marginBottom"
+        android:layout_marginLeft="@dimen/single_line_avatar_marginLeft"
+        android:layout_marginStart="@dimen/single_line_avatar_marginLeft"
+        android:layout_marginTop="@dimen/single_line_avatar_marginTop"
         android:src="@drawable/ic_user" />
 
 
@@ -23,12 +25,14 @@
         android:id="@+id/lblNombre"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingBottom="20dp"
-        android:paddingLeft="72dp"
-        android:paddingTop="20dp"
+        android:paddingBottom="@dimen/single_line_text_paddingBottom"
+        android:paddingLeft="@dimen/single_line_text_paddingLeft"
+        android:paddingTop="@dimen/single_line_text_paddingTop"
+        android:layout_toLeftOf="@+id/btnUp"
         tools:text="Baldomero Llegate Ligero"
-        android:layout_marginRight="16dp"
-        android:textSize="16sp" />
+        android:layout_marginRight="@dimen/single_line_text_marginRight"
+        android:layout_marginEnd="@dimen/single_line_text_marginRight"
+        android:textSize="@dimen/abc_text_size_subhead_material" />
 
     <ImageButton
         android:id="@+id/btnUp"
@@ -41,6 +45,7 @@
         android:layout_marginBottom="12dp"
         android:layout_marginRight="16dp"
         android:layout_toLeftOf="@+id/btnDown"
+        android:layout_toStartOf="@+id/btnDown"
         android:background="@android:color/transparent"
         android:contentDescription="@string/bajar"
         android:src="@drawable/ic_up" />
@@ -50,7 +55,9 @@
         android:layout_width="32dp"
         android:layout_height="32dp"
         android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_marginRight="16dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginTop="12dp"
         android:layout_marginBottom="12dp"
         android:background="@android:color/transparent"
