--- a/PR106-RecyclerView/app/src/main/res/layout/toolbar.xml
+++ b/PR106-RecyclerView/app/src/main/res/layout/toolbar.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="?attr/colorPrimary"
-    android:minHeight="56dp"
-    android:elevation="4dp"
+    android:minHeight="@dimen/actionbar_height"
+    android:elevation="@dimen/actionbar_elevation"
     app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
     app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
