--- a/PR106-RecyclerView/app/src/main/res/values/styles.xml
+++ b/PR106-RecyclerView/app/src/main/res/values/styles.xml
@@ -1,10 +1,15 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="AppBaseTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryDark">@color/primary_dark</item>
         <item name="colorAccent">@color/accent</item>
+    </style>
+
+    <!-- Tema de la aplicación. -->
+    <style name="AppTheme" parent="AppBaseTheme">
+
     </style>
 
     <!-- Estilo para el FAB -->
