--- a/PR012-ListViewOptimizado/app/src/main/res/values/dimens.xml
+++ b/PR012-ListViewOptimizado/app/src/main/res/values/dimens.xml
@@ -5,8 +5,8 @@
     <dimen name="tarjeta_cornersRadius">2.0dp</dimen>
     <dimen name="tarjeta_padding">5dp</dimen>
     <!-- Tarjeta -->
-    <dimen name="tarjeta_foto_width">100dp</dimen>
-    <dimen name="tarjeta_foto_height">100dp</dimen>
+    <dimen name="tarjeta_foto_width">81dp</dimen>
+    <dimen name="tarjeta_foto_height">108dp</dimen>
     <dimen name="tarjeta_nombre_padding">4dp</dimen>
     <dimen name="tarjeta_divider_height">1dp</dimen>
     <dimen name="tarjeta_margin">5dp</dimen>
@@ -17,5 +17,13 @@
     <dimen name="tarjeta_repetidor_translationY">5dp</dimen>
     <dimen name="tarjeta_modulo_textSize">13sp</dimen>
     <dimen name="tarjeta_modulo_width">65dp</dimen>
-    
+    <dimen name="card_padding">8dp</dimen>
+    <dimen name="card_content_padding">16dp</dimen>
+    <!-- Flat button -->
+    <dimen name="btn_flat_corner_radius">1dp</dimen>
+    <dimen name="btn_flat_min_width">88dp</dimen>
+    <dimen name="btn_flat_min_height">36dp</dimen>
+    <dimen name="btn_flat_padding">8dp</dimen>
+    <dimen name="btn_flat_margin">4dp</dimen>
+
 </resources>
