--- a/PR012-ListViewOptimizado/app/src/main/res/layout/tarjeta.xml
+++ b/PR012-ListViewOptimizado/app/src/main/res/layout/tarjeta.xml
@@ -1,201 +1,118 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@drawable/tarjeta_fondo"
-    tools:ignore="HardcodedText" >
+    android:layout_height="wrap_content">
 
-    <ImageView
-        android:id="@+id/imgFoto"
-        android:layout_width="@dimen/tarjeta_foto_width"
-        android:layout_height="@dimen/tarjeta_foto_height"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:contentDescription="@string/foto_del_alumno"
-        android:src="@drawable/foto" />
-
-    <TextView
-        android:id="@+id/lblNombre"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/lblCiclo"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/imgFoto"
-        android:layout_toEndOf="@+id/imgFoto"
-        android:gravity="center"
-        android:padding="@dimen/tarjeta_nombre_padding"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textStyle="bold" />
+        android:paddingTop="@dimen/card_padding"
+        android:paddingBottom="@dimen/card_padding"
+        android:paddingLeft="@dimen/card_padding">
 
-    <View
-        android:id="@+id/divider"
-        android:layout_width="0dp"
-        android:layout_height="@dimen/tarjeta_divider_height"
-        android:layout_alignBottom="@+id/imgFoto"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_toRightOf="@+id/imgFoto"
-        android:layout_toEndOf="@+id/imgFoto"
-        android:background="@android:drawable/divider_horizontal_textfield" />
+        <ImageView
+            android:id="@+id/imgFoto"
+            android:layout_width="@dimen/tarjeta_foto_width"
+            android:layout_height="@dimen/tarjeta_foto_height"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:scaleType="centerCrop"
+            android:contentDescription="@string/foto_del_alumno"
+            android:src="@drawable/foto" />
 
-    <TextView
-        android:id="@+id/lblCiclo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/divider"
-        android:layout_marginBottom="@dimen/tarjeta_margin"
-        android:layout_marginLeft="@dimen/tarjeta_margin"
-        android:layout_marginStart="@dimen/tarjeta_margin"
-        android:layout_toRightOf="@+id/imgFoto"
-        android:layout_toEndOf="@+id/imgFoto"
-        android:background="@drawable/tag_fondo"
-        android:textAllCaps="true" />
+        <TextView
+            android:id="@+id/lblNombre"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentTop="true"
+            android:layout_toRightOf="@+id/imgFoto"
+            android:layout_toEndOf="@+id/imgFoto"
+            android:paddingLeft="@dimen/card_content_padding"
+            android:paddingRight="@dimen/card_content_padding"
+            tools:text="Baldomero Llégate Ligero"
+            style="@style/Base.TextAppearance.AppCompat.Subhead" />
 
-    <TextView
-        android:id="@+id/lblCurso"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/divider"
-        android:layout_marginBottom="@dimen/tarjeta_margin"
-        android:layout_marginLeft="@dimen/tarjeta_margin"
-        android:layout_marginStart="@dimen/tarjeta_margin"
-        android:layout_toRightOf="@+id/lblCiclo"
-        android:layout_toEndOf="@+id/lblCiclo"
-        android:background="@drawable/tag_fondo"
-        android:textAllCaps="true" />
+        <TextView
+            android:id="@+id/lblCurso"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/lblNombre"
+            android:layout_toRightOf="@+id/imgFoto"
+            android:layout_toEndOf="@+id/imgFoto"
+            android:layout_alignParentRight="true"
+            android:paddingLeft="@dimen/card_content_padding"
+            android:paddingRight="@dimen/card_content_padding"
+            tools:text="2º CFGS DAM"
+            style="@style/Base.TextAppearance.AppCompat.Body2" />
 
-    <TextView
-        android:id="@+id/lblEdad"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/divider"
-        android:layout_marginBottom="@dimen/tarjeta_margin"
-        android:layout_marginLeft="@dimen/tarjeta_margin"
-        android:layout_marginStart="@dimen/tarjeta_margin"
-        android:layout_toRightOf="@+id/lblCurso"
-        android:layout_toEndOf="@+id/lblCurso"
-        android:background="@drawable/edad_fondo_mayor"
-        android:textColor="@android:color/white" />
+        <TextView
+            android:id="@+id/lblEdad"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/lblCurso"
+            android:layout_toRightOf="@+id/imgFoto"
+            android:layout_toEndOf="@+id/imgFoto"
+            android:layout_alignParentRight="true"
+            android:paddingLeft="@dimen/card_content_padding"
+            android:paddingRight="@dimen/card_content_padding"
+            tools:text="22 años"
+            style="@style/Base.TextAppearance.AppCompat.Body2" />
 
-    <TextView
-        android:id="@+id/lblRepetidor"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:background="@color/tarjeta_repetidor_background"
-        android:paddingBottom="@dimen/tarjeta_repetidor_verticalPadding"
-        android:paddingLeft="@dimen/tarjeta_repetidor_horizontalPadding"
-        android:paddingRight="@dimen/tarjeta_repetidor_horizontalPadding"
-        android:paddingTop="@dimen/tarjeta_repetidor_verticalPadding"
-        android:rotation="-45"
-        android:text="REP"
-        android:textColor="@android:color/white"
-        android:textSize="@dimen/tarjeta_repetidor_textSize"
-        android:translationX="@dimen/tarjeta_repetidor_translationX"
-        android:translationY="@dimen/tarjeta_repetidor_translationY"
-        tools:ignore="HardcodedText" />
+        <View
+            android:id="@+id/divider"
+            android:layout_width="wrap_content"
+            android:layout_height="1dp"
+            android:layout_toRightOf="@+id/imgFoto"
+            android:layout_below="@+id/lblEdad"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="2dp"
+            android:background="@color/divider" />
 
-    <View
-        android:id="@+id/vCentroHorizontal"
-        android:layout_width="@dimen/tarjeta_margin"
-        android:layout_height="0dp"
-        android:layout_below="@+id/divider"
-        android:layout_centerHorizontal="true" />
+        <Button
+            android:id="@+id/btnNotas"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Notas"
+            android:layout_below="@+id/divider"
+            android:layout_toRightOf="@+id/imgFoto"
+            android:layout_toEndOf="@+id/imgFoto"
+            android:layout_marginLeft="@dimen/card_content_padding"
+            style="@style/AppCompat.Button.Flat.Common" />
 
-    <include
-        android:id="@+id/llModulo1"
-        android:layout_width="@dimen/tarjeta_modulo_width"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/divider"
-        android:layout_marginTop="@dimen/tarjeta_margin"
-        android:layout_toLeftOf="@+id/llModulo2"
-        android:layout_toStartOf="@+id/llModulo2"
-        layout="@layout/modulo" />
+        <Button
+            android:id="@+id/btnLlamar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Llamar"
+            android:layout_below="@+id/divider"
+            android:layout_toRightOf="@+id/btnNotas"
+            android:layout_toEndOf="@+id/btnNotas"
+            style="@style/AppCompat.Button.Flat.Common" />
 
-    <include
-        android:id="@+id/llModulo2"
-        android:layout_width="@dimen/tarjeta_modulo_width"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/divider"
-        android:layout_marginLeft="@dimen/tarjeta_margin"
-        android:layout_marginStart="@dimen/tarjeta_margin"
-        android:layout_marginTop="@dimen/tarjeta_margin"
-        android:layout_toLeftOf="@+id/vCentroHorizontal"
-        android:layout_toStartOf="@+id/vCentroHorizontal"
-        layout="@layout/modulo" />
+        <TextView
+            android:id="@+id/lblRepetidor"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:background="@color/tarjeta_repetidor_background"
+            android:paddingBottom="@dimen/tarjeta_repetidor_verticalPadding"
+            android:paddingLeft="@dimen/tarjeta_repetidor_horizontalPadding"
+            android:paddingRight="@dimen/tarjeta_repetidor_horizontalPadding"
+            android:paddingTop="@dimen/tarjeta_repetidor_verticalPadding"
+            android:rotation="-45"
+            android:text="REP"
+            android:textColor="@android:color/white"
+            android:textSize="@dimen/tarjeta_repetidor_textSize"
+            android:translationX="@dimen/tarjeta_repetidor_translationX"
+            android:translationY="@dimen/tarjeta_repetidor_translationY"
+            tools:ignore="HardcodedText" />
 
-    <include
-        android:id="@+id/llModulo3"
-        android:layout_width="@dimen/tarjeta_modulo_width"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/divider"
-        android:layout_marginTop="@dimen/tarjeta_margin"
-        android:layout_toRightOf="@+id/vCentroHorizontal"
-        android:layout_toEndOf="@+id/vCentroHorizontal"
-        layout="@layout/modulo" />
-
-    <include
-        android:id="@+id/llModulo4"
-        android:layout_width="@dimen/tarjeta_modulo_width"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/divider"
-        android:layout_marginLeft="@dimen/tarjeta_margin"
-        android:layout_marginStart="@dimen/tarjeta_margin"
-        android:layout_marginTop="@dimen/tarjeta_margin"
-        android:layout_toRightOf="@+id/llModulo3"
-        android:layout_toEndOf="@+id/llModulo3"
-        layout="@layout/modulo" />
-
-    <include
-        android:id="@+id/llModulo5"
-        android:layout_width="@dimen/tarjeta_modulo_width"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/llModulo1"
-        android:layout_alignStart="@+id/llModulo1"
-        android:layout_below="@+id/llModulo1"
-        android:layout_marginTop="@dimen/tarjeta_margin"
-        layout="@layout/modulo" />
-
-    <include
-        android:id="@+id/llModulo6"
-        android:layout_width="@dimen/tarjeta_modulo_width"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/llModulo2"
-        android:layout_alignStart="@+id/llModulo2"
-        android:layout_below="@+id/llModulo2"
-        android:layout_marginTop="@dimen/tarjeta_margin"
-        android:layout_toRightOf="@+id/llModulo5"
-        android:layout_toEndOf="@+id/llModulo5"
-        layout="@layout/modulo" />
-
-    <include
-        android:id="@+id/llModulo7"
-        android:layout_width="@dimen/tarjeta_modulo_width"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/llModulo3"
-        android:layout_alignStart="@+id/llModulo3"
-        android:layout_below="@+id/llModulo3"
-        android:layout_marginTop="@dimen/tarjeta_margin"
-        android:layout_toRightOf="@+id/llModulo6"
-        android:layout_toEndOf="@+id/llModulo6"
-        layout="@layout/modulo" />
-
-    <include
-        android:id="@+id/llModulo8"
-        android:layout_width="@dimen/tarjeta_modulo_width"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/llModulo4"
-        android:layout_alignStart="@+id/llModulo4"
-        android:layout_below="@+id/llModulo4"
-        android:layout_marginTop="@dimen/tarjeta_margin"
-        android:layout_toRightOf="@+id/llModulo7"
-        android:layout_toEndOf="@+id/llModulo7"
-        layout="@layout/modulo" />
-
-</RelativeLayout>
+    </RelativeLayout>
+</android.support.v7.widget.CardView>
