--- a/PR012-ListViewOptimizado/app/src/main/res/values/styles.xml
+++ b/PR012-ListViewOptimizado/app/src/main/res/values/styles.xml
@@ -1,20 +1,29 @@
 <resources>
 
-    <!--
-        Base application theme, dependent on API level. This theme is replaced
-        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
-    -->
-    <style name="AppBaseTheme" parent="android:Theme.Light">
-        <!--
-            Theme customizations available in newer API levels can go in
-            res/values-vXX/styles.xml, while customizations related to
-            backward-compatibility can go here.
-        -->
+    <!-- Base application theme. -->
+    <style name="AppBaseTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="colorPrimary">@color/primary</item>
+        <item name="colorPrimaryDark">@color/primary_dark</item>
+        <item name="colorAccent">@color/accent</item>
     </style>
 
-    <!-- Application theme. -->
+    <!-- Tema de la aplicación. -->
     <style name="AppTheme" parent="AppBaseTheme">
-        <!-- All customizations that are NOT specific to a particular API-level can go here. -->
+
+    </style>
+
+    <!-- Botón plano -->
+    <style name="AppCompat.Button.Flat.Common" parent="Base.TextAppearance.AppCompat.Button">
+        <item name="android:minWidth">@dimen/btn_flat_min_width</item>
+        <item name="android:minHeight">@dimen/btn_flat_min_height</item>
+        <item name="android:textColor">@drawable/color_btn_flat_selector</item>
+        <item name="android:background">@drawable/btn_flat_selector</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:paddingLeft">@dimen/btn_flat_padding</item>
+        <item name="android:paddingRight">@dimen/btn_flat_padding</item>
+        <item name="android:layout_marginLeft">@dimen/btn_flat_margin</item>
+        <item name="android:layout_marginRight">@dimen/btn_flat_margin</item>
     </style>
 
 </resources>
