--- a/PR106-RecyclerView/app/src/main/res/layout/activity_main_item.xml
+++ b/PR106-RecyclerView/app/src/main/res/layout/activity_main_item.xml
@@ -3,62 +3,62 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:minHeight="@dimen/single_line_tile_height"
+    android:minHeight="@dimen/two_line_tile_height"
     android:background="@drawable/selectable_item_background"
     android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/imgUser"
-        android:layout_width="@dimen/single_line_avatar_width"
-        android:layout_height="@dimen/single_line_avatar_height"
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/imgAvatar"
+        android:layout_width="@dimen/two_line_avatar_width"
+        android:layout_height="@dimen/two_line_avatar_height"
         android:contentDescription="@string/foto_alumno"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="@dimen/single_line_avatar_marginBottom"
-        android:layout_marginLeft="@dimen/single_line_avatar_marginLeft"
-        android:layout_marginStart="@dimen/single_line_avatar_marginLeft"
-        android:layout_marginTop="@dimen/single_line_avatar_marginTop"
+        android:layout_marginTop="@dimen/two_line_avatar_marginTop"
+        android:layout_marginLeft="@dimen/two_line_avatar_marginLeft"
+        android:layout_marginStart="@dimen/two_line_avatar_marginLeft"
         android:src="@drawable/ic_user" />
 
     <TextView
         android:id="@+id/lblNombre"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingBottom="@dimen/single_line_text_paddingBottom"
-        android:paddingLeft="@dimen/single_line_text_paddingLeft"
-        android:paddingTop="@dimen/single_line_text_paddingTop"
-        android:layout_toLeftOf="@+id/btnUp"
-        android:layout_alignParentLeft="true"
-        tools:text="Baldomero Llegate Ligero"
-        android:layout_marginRight="@dimen/single_line_text_marginRight"
-        android:layout_marginEnd="@dimen/single_line_text_marginRight"
-        android:textSize="@dimen/abc_text_size_subhead_material" />
-
-    <ImageButton
-        android:id="@+id/btnUp"
-        android:layout_width="@dimen/single_line_secundary_icon_width"
-        android:layout_height="@dimen/single_line_secundary_icon_height"
-        android:layout_alignWithParentIfMissing="true"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="@dimen/single_line_secundary_icon_marginLeft"
-        android:layout_marginTop="@dimen/single_line_secundary_icon_marginTop"
-        android:layout_marginBottom="@dimen/single_line_secundary_icon_marginBottom"
-        android:layout_marginRight="@dimen/single_line_secundary_icon_marginRight"
+        android:paddingLeft="@dimen/two_line_text_paddingLeft"
+        android:paddingTop="@dimen/two_line_text_paddingTop"
         android:layout_toLeftOf="@+id/btnDown"
         android:layout_toStartOf="@+id/btnDown"
-        android:background="@android:color/transparent"
-        android:contentDescription="@string/bajar"
-        android:src="@drawable/ic_up" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        tools:text="Baldomero Llegate Ligero"
+        android:layout_marginRight="@dimen/two_line_text_marginRight"
+        android:layout_marginEnd="@dimen/two_line_text_marginRight"
+        android:textSize="@dimen/abc_text_size_subhead_material" />
+
+    <TextView
+        android:id="@+id/lblDireccion"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingBottom="@dimen/two_line_secundary_text_paddingBottom"
+        android:paddingLeft="@dimen/two_line_text_paddingLeft"
+        android:layout_toLeftOf="@+id/btnDown"
+        android:layout_toStartOf="@+id/btnDown"
+        android:layout_below="@+id/lblNombre"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        tools:text="c/ La casa de Baldomero"
+        android:layout_marginRight="@dimen/two_line_text_marginRight"
+        android:layout_marginEnd="@dimen/two_line_text_marginRight"
+        android:textSize="14sp" />
 
     <ImageButton
         android:id="@+id/btnDown"
-        android:layout_width="@dimen/single_line_secundary_icon_width"
-        android:layout_height="@dimen/single_line_secundary_icon_height"
+        android:layout_width="@dimen/two_line_secundary_icon_width"
+        android:layout_height="@dimen/two_line_secundary_icon_height"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="@dimen/single_line_secundary_icon_marginTop"
-        android:layout_marginBottom="@dimen/single_line_secundary_icon_marginBottom"
-        android:layout_marginRight="@dimen/single_line_secundary_icon_marginRight"
+        android:layout_centerVertical="true"
+        android:layout_marginRight="@dimen/two_line_secundary_icon_marginRight"
+        android:layout_marginEnd="@dimen/two_line_secundary_icon_marginRight"
         android:background="@android:color/transparent"
         android:contentDescription="@string/bajar"
         android:src="@drawable/ic_down" />
