--- a/PR106-RecyclerView/app/src/main/res/values/dimens.xml
+++ b/PR106-RecyclerView/app/src/main/res/values/dimens.xml
@@ -18,21 +18,16 @@
     <!-- Panel inferior -->
     <dimen name="panel_inferior_height">44dp</dimen>
     <!-- Single line with avatar list item -->
-    <dimen name="single_line_tile_height">56dp</dimen>
-    <dimen name="single_line_avatar_width">48dp</dimen>
-    <dimen name="single_line_avatar_height">48dp</dimen>
-    <dimen name="single_line_avatar_marginBottom">4dp</dimen>
-    <dimen name="single_line_avatar_marginLeft">16dp</dimen>
-    <dimen name="single_line_avatar_marginTop">4dp</dimen>
-    <dimen name="single_line_text_paddingBottom">20dp</dimen>
-    <dimen name="single_line_text_paddingLeft">72dp</dimen>
-    <dimen name="single_line_text_paddingTop">20dp</dimen>
-    <dimen name="single_line_text_marginRight">16dp</dimen>
-    <dimen name="single_line_secundary_icon_width">32dp</dimen>
-    <dimen name="single_line_secundary_icon_height">32dp</dimen>
-    <dimen name="single_line_secundary_icon_marginLeft">16dp</dimen>
-    <dimen name="single_line_secundary_icon_marginTop">12dp</dimen>
-    <dimen name="single_line_secundary_icon_marginBottom">12dp</dimen>
-    <dimen name="single_line_secundary_icon_marginRight">16dp</dimen>
-
+    <dimen name="two_line_tile_height">72dp</dimen>
+    <dimen name="two_line_avatar_width">40dp</dimen>
+    <dimen name="two_line_avatar_height">40dp</dimen>
+    <dimen name="two_line_avatar_marginTop">20dp</dimen>
+    <dimen name="two_line_avatar_marginLeft">16dp</dimen>
+    <dimen name="two_line_text_paddingTop">18dp</dimen>
+    <dimen name="two_line_secundary_text_paddingBottom">20dp</dimen>
+    <dimen name="two_line_text_paddingLeft">72dp</dimen>
+    <dimen name="two_line_text_marginRight">16dp</dimen>
+    <dimen name="two_line_secundary_icon_width">32dp</dimen>
+    <dimen name="two_line_secundary_icon_height">32dp</dimen>
+    <dimen name="two_line_secundary_icon_marginRight">16dp</dimen>
 </resources>
