--- a/PR021-Spinner/app/src/main/res/layout/activity_main_pais_collapsed.xml
+++ b/PR021-Spinner/app/src/main/res/layout/activity_main_pais_collapsed.xml
@@ -11,6 +11,7 @@
         android:layout_width="@dimen/collapsed_width"
         android:layout_height="match_parent"
         android:layout_marginRight="@dimen/imgBandera_marginRight"
+        android:layout_marginEnd="@dimen/imgBandera_marginRight"
         android:contentDescription="@string/bandera" />
 
     <TextView
