--- a/PR027-SQLiteDAO/app/src/main/res/layout/fragment_lista_alumnos_item.xml
+++ b/PR027-SQLiteDAO/app/src/main/res/layout/fragment_lista_alumnos_item.xml
@@ -6,8 +6,7 @@
     android:background="@drawable/item_background_selector"
     android:minHeight="@dimen/three_lines_tile_height">
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/imgAvatar"
         android:layout_width="@dimen/three_lines_avatar_height"
         android:layout_height="@dimen/three_lines_avatar_height"
@@ -15,7 +14,7 @@
         android:layout_marginStart="@dimen/three_lines_avatar_marginLeft"
         android:layout_marginTop="@dimen/three_lines_avatar_marginTop"
         app:border_width="1dp"
-        app:border_color="@color/accent"/>
+        app:border_color="@color/accent" />
 
     <TextView
         android:id="@+id/lblNombre"
@@ -25,7 +24,8 @@
         android:paddingRight="@dimen/three_lines_text_paddingRight"
         android:paddingTop="@dimen/three_lines_text_paddingTop"
         tools:text="Nombre"
-        android:textSize="@dimen/three_lines_primary_text_textSize" />
+        android:textSize="@dimen/three_lines_primary_text_textSize"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/lblCurso"
