--- a/PR028-SQLiteLoader/app/src/main/res/layout/activity_main.xml
+++ b/PR028-SQLiteLoader/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,6 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/flContenido"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity" >
-
-    <fragment
-        android:id="@+id/frgListaAlumnos"
-        android:name="es.iessaladillo.pedrojoya.pr028.fragmentos.ListaAlumnosFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
-</RelativeLayout>
+    tools:context=".MainActivity" />
