--- a/PR028-SQLiteLoader/app/src/main/res/layout/fragment_lista_alumnos.xml
+++ b/PR028-SQLiteLoader/app/src/main/res/layout/fragment_lista_alumnos.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
+    android:layout_height="fill_parent">
     <ListView
         android:id="@+id/lstAlumnos"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:clipToPadding="false"
-        android:divider="#00000000"
-        android:padding="8dp"
-        android:dividerHeight="8dp" />
+        android:divider="@drawable/item_divider"
+        android:dividerHeight="1dp"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp" />
     <RelativeLayout
         android:id="@+id/rlListaVacia"
         android:layout_width="fill_parent"
@@ -30,6 +31,21 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/imgNuevoAlumno"
             android:layout_centerHorizontal="true"
-            android:text="@string/sin_alumnado_agregue_un_alumno" />
+            android:text="@string/sin_alumnado_agregue_un_alumno"
+            android:textAlignment="center" />
     </RelativeLayout>
+    <com.software.shell.fab.ActionButton
+        android:id="@+id/btnAgregar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_marginRight="@dimen/fab_margin"
+        android:layout_marginEnd="@dimen/fab_margin"
+        android:layout_marginBottom="@dimen/fab_margin"
+        fab:button_color="@color/accent"
+        fab:button_colorPressed="@color/accent_light"
+        fab:image="@drawable/fab_plus_icon"
+        fab:show_animation="@anim/fab_roll_from_down"
+        fab:hide_animation="@anim/fab_roll_to_down" />
+
 </FrameLayout>
