--- a/PR118-SearchView/app/src/main/res/layout/activity_busqueda.xml
+++ b/PR118-SearchView/app/src/main/res/layout/activity_busqueda.xml
@@ -1,6 +1,23 @@
-<ListView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/lstResultados"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    tools:context="es.iessaladillo.pedrojoya.pr118.actividades.BusquedaActivity" />
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+    <!-- StatusBar para API 19 -->
+    <View
+        android:id="@+id/statusBar"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/statusbar_height"
+        android:background="@color/primary_dark" />
+    <!-- Toolbar -->
+    <include
+        layout="@layout/toolbar"
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/statusBar" />
+    <!-- Panel -->
+    <ListView
+        android:id="@+id/lstResultados"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/toolbar" />
+</RelativeLayout>
