--- a/PR120-SearchViewSuggestions/app/src/main/res/layout/activity_alumno.xml
+++ b/PR120-SearchViewSuggestions/app/src/main/res/layout/activity_alumno.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -15,6 +16,13 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/statusBar" />
     <!-- Panel -->
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/flContenido"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_below="@+id/toolbar"
+        android:layout_alignParentBottom="true" />
+
     <ListView
         android:id="@+id/lstResultados"
         android:layout_width="wrap_content"
