--- a/PR120-SearchViewSuggestions/app/src/main/res/menu/menu_activity_main.xml
+++ b/PR120-SearchViewSuggestions/app/src/main/res/menu/menu_activity_main.xml
@@ -6,7 +6,7 @@
         android:id="@+id/mnuBuscar"
         android:title="@string/buscar"
         android:orderInCategory="100"
-        android:icon="@android:drawable/ic_search_category_default"
+        android:icon="@drawable/ic_search"
         app:actionViewClass="android.support.v7.widget.SearchView"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="ifRoom|collapseActionView" />
 </menu>
