--- a/PR120-SearchViewSuggestions/app/src/main/res/values/dimens.xml
+++ b/PR120-SearchViewSuggestions/app/src/main/res/values/dimens.xml
@@ -1,2 +1,6 @@
 <resources>
+    <dimen name="toolbar_elevation">4dp</dimen>
+    <dimen name="fragment_alumno_padding">10dp</dimen>
+    <dimen name="fragment_alumno_marginBottom">5dp</dimen>
+
 </resources>
