--- a/PR120-SearchViewSuggestions/app/src/main/res/values/styles.xml
+++ b/PR120-SearchViewSuggestions/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppBaseTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryDark">@color/primary_dark</item>
         <item name="colorAccent">@color/accent</item>
@@ -10,6 +10,16 @@
 
     <style name="SearchViewStyle" parent="Widget.AppCompat.SearchView">
         <item name="suggestionRowLayout">@layout/search_dropdown_item</item>
+        <item name="searchIcon">@android:color/transparent</item>
     </style>
+
+    <style name="AppTheme" parent="AppBaseTheme">
+
+    </style>
+
+    <style name="ToolbarStyle" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
+    </style>
+
+
 
 </resources>
